WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292265
[GStreamer][WebRTC] Potential infinite loop in apps relying on the negotiationneeded event
https://bugs.webkit.org/show_bug.cgi?id=292265
Summary
[GStreamer][WebRTC] Potential infinite loop in apps relying on the negotiatio...
Philippe Normand
Reported
2025-04-29 03:52:17 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-04-29 03:58:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44681
EWS
Comment 2
2025-04-30 05:40:58 PDT
Committed
294330@main
(c82b7c4aeee3): <
https://commits.webkit.org/294330@main
> Reviewed commits have been landed. Closing PR #44681 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-04-30 05:41:15 PDT
<
rdar://problem/150361804
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug