[GStreamer][WebRTC] Potential infinite loop in apps relying on the negotiationneeded event https://bugs.webkit.org/show_bug.cgi?id=292265

Reviewed by Xabier Rodriguez-Calvar.

Clear the m_negotiationNeededEventId before emitting the JS negotiationneeded event, preventing the
handler to trigger another event with the same ID.

* Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::updateNegotiationNeededFlag):

Canonical link: https://commits.webkit.org/294330@main